test.yaml
---
# Source: monitoring-demo-app/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: monitoring-demo-app
  name: monitoring-demo-app-service
  labels:
    app.kubernetes.io/instance: monitoring-demo-app
spec:
  selector:
    app.kubernetes.io/instance: monitoring-demo-app
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8000
  type: ClusterIP
---
# Source: monitoring-demo-app/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: monitoring-demo-app
  name: monitoring-demo-app
  labels:
    app.kubernetes.io/instance: monitoring-demo-app
spec:
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  replicas: 2
  ignoreDifferences:
  - group: apps
    kind: Deployment
    jsonPointers:
    - /spec/replicas
  selector:
    matchLabels:
      app.kubernetes.io/instance: monitoring-demo-app
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: monitoring-demo-app
    spec:
      containers:
        - name: monitoring-demo-app
          image: "lukaszsel/monitoring-demo-app:latest"
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8000
              protocol: TCP
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
---
# Source: monitoring-demo-app/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: monitoring-demo-app-ingress
  namespace: monitoring-demo-app
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: mondemo.sellmann.pl
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: monitoring-demo-app-service
                port:
                  number: 80
